# mssh

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  mssh.schemas  mssh_clusters.conf
src/: Makefile.am  Makefile.in  mssh-gconf.c  mssh-gconf.h  mssh-pref.c  mssh-pref.h  mssh-terminal.c  mssh-terminal.h  mssh-window.c  mssh-window.h  mssh.c
